payment middleware + small refactoring
